--- a/config/default.yml
+++ b/config/default.yml
@@ -1,6 +1,3 @@
-require:
-  - ./lib/rubocop/cop/boxt/api_path_format.rb
-
 AllCops:
   Exclude:
     - "**/*/schema.rb"
@@ -9,6 +6,10 @@ AllCops:
     - tmp/**/*
     - vendor/**/*
   NewCops: enable
+
+Boxt/ApiPathFormat:
+  Description: 'Ensure that the API path uses kebab case'
+  Enabled: false
 
 Layout/ClassStructure:
   Enabled: true
