--- a/rspec.yml
+++ b/rspec.yml
@@ -25,4 +25,6 @@ RSpec/MultipleMemoizedHelpers:
 RSpec/NestedGroups:
   Max: 4
 
-
+# Multi-line examples must have a description
+RSpec/ExampleWithoutDescription:
+  EnforcedStyle: single_line_only
