Fixed dependabot config

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,15 +1,15 @@
 version: 2
 updates:
-  - package-ecosystem: "github-actions"
+  - package-ecosystem: bundler
     directory: "/"
     schedule:
       interval: weekly
     groups:
       ruby-dependencies:
-          update-types:
-            - "minor"
-            - "patch"
-  - package-ecosystem: bundler
+        update-types:
+          - "minor"
+          - "patch"
+  - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: daily
+      interval: weekly
