--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI
 on:
   push:
     paths-ignore:
-      - 'README.md'
+      - "README.md"
 
 jobs:
   lint_and_test:
@@ -13,6 +13,6 @@ jobs:
       - uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
-          ruby-version: "3.3.1"
+          ruby-version: "3.3.2"
       - run: bundle exec rubocop
       - run: bundle exec rake test
