Updated dependabot config

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,8 @@ updates:
         update-types:
           - "minor"
           - "patch"
+    ignore:
+      - dependency-name: "net-pop"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
