--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,3 +15,7 @@ Rails/RakeEnvironment:
 # the individual tests are always going to be a bit long.
 RSpec/ExampleLength:
   Enabled: false
+
+# Setting this to a max of 3 as 2 is too restrictive for some of our code
+Style/SafeNavigationChainLength:
+  Max: 3
