--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
-      - uses: ruby/setup-ruby@v1
+      - uses: ruby/setup-ruby@f8d7259c7a66155a7c4a157a1a10ca601f186594
         with:
           bundler-cache: true
-          ruby-version: "3.4.7"
       - run: bundle exec rubocop
       - run: bundle exec rake test
